objects/QA_Defect_Track__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <description>What is the actual result from executing the test script.</description>
        <inlineHelpText>What is the actual result from executing the test script.</inlineHelpText>
        <label>Actual Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>This field becomes required if the Status value is Passed with Notes.</description>
        <inlineHelpText>This field becomes required if the Status value is Passed with Notes.</inlineHelpText>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Volo developer assigned to fix the defect.</description>
        <inlineHelpText>Volo developer assigned to fix the defect.</inlineHelpText>
        <label>Assigned Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Defect_Track1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Defect_Track</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <description>What is the correct outcome from executing the test script.</description>
        <inlineHelpText>What is the correct outcome from executing the test script.</inlineHelpText>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High (Urgent - Cannot Go Live)</fullName>
                </value>
                <value>
                    <fullName>Med (Not Urgent - Can go Live)</fullName>
                </value>
                <value>
                    <fullName>Low (Not Urgent - Can be handled later)</fullName>
                </value>
                <value>
                    <fullName>Minor - Can be ignored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Defect_Summary__c</fullName>
        <label>QA Defect Summary</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Ready for Re-test</fullName>
                </value>
                <value>
                    <fullName>Change Assignment</fullName>
                </value>
                <value>
                    <fullName>Passed with Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script1__c</fullName>
        <label>Test Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <description>Provide the step by step test script to validate the User Story.</description>
        <inlineHelpText>Provide the step by step test script to validate the User Story.</inlineHelpText>
        <label>Test Script Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>QA Defect Track</relationshipLabel>
        <relationshipName>QA_Defect_Track</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QA Defect Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Result__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>Additional_Notes__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Priority__c</columns>
        <columns>QA_Defect_Summary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_QA_Defects_Ready_for_Retest</fullName>
        <columns>NAME</columns>
        <columns>QA_Defect_Summary__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_to__c</columns>
        <columns>Assigned__c</columns>
        <columns>Test_Script__c</columns>
        <columns>Test_Script1__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>Actual_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Re-test</value>
        </filters>
        <label>All QA Defects Ready for Retest</label>
    </listViews>
    <listViews>
        <fullName>Change_Assignment_Defects</fullName>
        <columns>NAME</columns>
        <columns>QA_Defect_Summary__c</columns>
        <columns>Test_Script__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Script1__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Assigned__c</columns>
        <columns>Additional_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Change Assignment</value>
        </filters>
        <label>Change Assignment Defects</label>
    </listViews>
    <listViews>
        <fullName>Failed_QA_Defects</fullName>
        <columns>NAME</columns>
        <columns>QA_Defect_Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Test_Script1__c</columns>
        <columns>Test_Script__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed QA Defects</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>QA Defect Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Defect Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Additional_Notes_Required</fullName>
        <active>true</active>
        <description>Additional Notes field will be required if the Status is &quot;Passed with Notes.&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Passed with Notes&quot;),  Additional_Notes__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Additional_Notes__c</errorDisplayField>
        <errorMessage>You must enter more details into the Additional Notes field.</errorMessage>
    </validationRules>
</CustomObject>